<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Camera Object Detector</string>
    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <string name="logo">Logo</string>
    <string name="label">Username</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="page_title">VirtualEye</string>

    <string name="create">Create Account</string>

    <!--activity signup string-->
    <string name="firstname">Firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">Email</string>
    <string name="confirmPass">Re-Password</string>
    <string name="top_app_bar">Virtual Eye</string>







    <!--activity home string-->
    <string name="objectDetection_title">Object Detection</string>
    <string name="obstacleDetection_title">obstacle Detection</string>
    <string name="home">Home</string>
    <string name="content_description_object_detection">detect object around</string>
    <string name="content_description_obstacle_detection">detect object around</string>
    <string name="content_description_home">just home page</string>
    <string name="logOutTitle">Logout</string>


</resources>
