<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DC131212"
        tools:context="com.example.android.capstone.ceg.GoogleSignInActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="#4E1EA5" android:textColorHint="#F3EDED"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F1EBEB" android:backgroundTint="#DACFCF"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="#4E1EA5" android:textColorHint="#F3EDED"
            app:layout_constraintTop_toBottomOf="@+id/emailLogin" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F1EBEB" android:backgroundTint="#DACFCF"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_login"
            app:iconGravity="textStart"
            android:onClick="loginAttempt"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLogin" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:backgroundTint="#5A17CF"
            android:textSize="16sp" android:textColor="#FFFFFF" android:textStyle="bold"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#786565" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/ContainedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="startSignupActivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:backgroundTint="#5A17CF"
            android:textSize="16sp" android:textColor="#FFFFFF" android:textStyle="bold"
            android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>